Atempt to fix problems with OverflowX on mobile

--- a/global.css
+++ b/global.css
@@ -102,7 +102,7 @@ nav .menuButton:hover{
 }
 
 menu{
-    margin: 0rem;
+    overflow-x: hidden;
     background-color: var(--roncalli-red);
     border-style: solid;
     border-width: 0rem 0.5rem 0.5rem 0.5rem;
@@ -110,6 +110,7 @@ menu{
     padding: 1rem 1.5rem 1rem 1.5rem;
     height: calc(100vh - 5.5rem);
     width: 100%;
+    margin: 0rem;
     position: absolute;
     top: 5.5rem;
     left: 0%;
